--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 server.port=${PORT:8001}
 
 # MySQL settigs
-spring.datasource.url=jdbc:mysql://localhost:3306/sakila
+#spring.datasource.url=jdbc:mysql://localhost:3306/sakila
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# MariaDB settigs
+spring.datasource.url=jdbc:mariadb://localhost:3306/sakila
 spring.datasource.username=root
 spring.datasource.password=root
 
