--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -16,3 +16,11 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
 
 spring.data.rest.basePath=/auto
+
+springdoc.show-actuator=true
+#springdoc.packagesToScan=com.example
+springdoc.swagger-ui.use-root-path=true
+springdoc.swagger-ui.path=/open-api
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.operationsSorter=alpha
+springdoc.swagger-ui.docExpansion=none
