--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -42,7 +42,7 @@ spring.config.import=optional:configserver:${CONFIGSRV_URL:http://localhost:8888
 #spring.profiles.active=production
 spring.cloud.config.import-check.enabled=false
 
-#valor.ejemplo=Valor configurado localmente
+valor.ejemplo=Valor configurado localmente
 #jwt.key.public=
 
 management.endpoints.web.exposure.include=*
