--- a/catalogo/pom.xml
+++ b/catalogo/pom.xml
@@ -76,6 +76,10 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+		    <groupId>io.micrometer</groupId>
+		    <artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-tracing-bridge-brave</artifactId>
 		</dependency>
